# UAVs-Path-planning-amsc

./: .gitignore  CMakeLists.txt  README.md  parallel.md  setup.md
data/: earthquake_sim_200.csv  input.csv  input2.csv  input3.csv  input_iceland.csv  input_km.csv  input_scal.csv  laquila_survey_200.csv
output/: bench_obstacles.csv  bench_parallel.csv  bench_scaling.csv  iceland_clusters.csv  iceland_clusters.kml  iceland_comparison.kml  iceland_drstasa.kml  iceland_drstasa_clusters.kml  iceland_obstacles.kml  iceland_sa.kml  iceland_sa_clusters.kml
scripts/: plot_benchmark.py  plot_kmeans.py  plot_results.py
src/: main.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test2.cpp  test3.cpp  test6.cpp  test7.cpp  test8.cpp  testTSP.cpp  testbenchmark.cpp  testiceland.cpp  testkmeans.cpp  testobstacles.cpp
src/cpp/: main.cpp
src/cpp/algorithms/: serial_simulated_annealing.hpp  simulated_annealing.hpp
src/cpp/criterion/: criterion.hpp
src/cpp/domain/: domain.hpp  prefabs.hpp
src/cpp/functions/: combinatorics.hpp  discrete.hpp
src/cpp/geometry/: combination.hpp  lattice_point.hpp  measure.hpp  point.hpp
src/cpp/neighbourhoods/: neighbourhood_gen.hpp
src/cpp/sampler/: uniform_sampler.hpp
src/cpp/scheduler/: scheduler.hpp
src/exporters/: plotter.hpp  pointsListExporter.cpp  pointsListExporter.hpp  pointsListReader.cpp  pointsListReader.hpp
src/scenarios/: iceland.hpp
src/simulatedAnnealing/: main.cpp
src/simulatedAnnealing/algorithms/: annealing_policy.hpp  parallel_common_simulated_annealing.hpp  parallel_scattered_simulated_annealing.hpp  serial_simulated_annealing.hpp  simulated_annealing.hpp
src/simulatedAnnealing/controller/: controller.cpp  controller.hpp
src/simulatedAnnealing/criterion/: criterion.hpp
src/simulatedAnnealing/domain/: domain.hpp  prefabs.hpp
src/simulatedAnnealing/examples/: continuous.cpp
src/simulatedAnnealing/functions/: combinatorics.hpp  continuous.hpp  discrete.hpp
src/simulatedAnnealing/geometry/: combination.hpp  lattice_point.hpp  measure.hpp  point.hpp  point_base.hpp
src/simulatedAnnealing/neighbourhoods/: neighbourhood_drstasa.hpp  neighbourhood_gen.hpp
src/simulatedAnnealing/sampler/: exception.hpp  local_sampler.hpp  local_sampler_fixed.hpp  non_local_sampler.hpp  sampler_base.hpp  uniform_sampler.hpp
src/simulatedAnnealing/scheduler/: scheduler.hpp
src/structures/: drone.cpp  drone.hpp  kmeans.hpp  point.cpp  point.hpp  pointsList.cpp  pointsList.hpp
src/structures/drstasa/: drstasa.cpp  drstasa.hpp  reverseLearnStrategy.cpp  reverseLearnStrategy.hpp  stasaNeighbourhood.cpp  stasaNeighbourhood.hpp
src/structures/fitness/: fitnessFunction.cpp  fitnessFunction.hpp
src/structures/functions/: fitnessUtilities.cpp  fitnessUtilities.hpp
src/structures/geo/: geoUtils.cpp  geoUtils.hpp
src/structures/lhs/: lhs.cpp  lhs.hpp
src/structures/obstacles/: cylinderObstacle.cpp  cylinderObstacle.hpp  obstacle.hpp
src/structures/pipeline/: pipelineRunner.hpp
src/structures/segment/: segmentAppender.hpp  segmentOptimizer.cpp  segmentOptimizer.hpp
src/structures/tsp/: tspNeighbourhood.hpp  tspSA.hpp  tspSampler.hpp
